
2000-09-05	Joel Sherrill <joel@OARcorp.com>

	* libio.c: Added O_NONBLOCK to list of flags.

2000-08-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.in: Remove libcpu and libbsp
	* Makefile.am: Remove libcpu and libbsp

2000-08-25	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libc/fs_null_handlers.c: Added missing rmnod entry.

2000-08-25	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libc/isatty.c, libc/imfs_handlers_directory.c, libc/creat.c,
	libc/imfs_directory.c: Fixed style issues.

2000-08-11  Chris Johns <ccj@acm.org>

	* libc/chmod.c: Return ENOTSUP if filesystem does not have handler.
	* libc/eval.c: Ditto.
	* libc/fcntl.c: Ditto.
	* libc/fsync.c: Ditto.
	* libc/ioctl.c: Ditto.
	* libc/ioman.c: Ditto.
	* libc/memfile.c: Ditto.
	* libc/link.c: Ditto.
	* libc/mknod.c: Ditto.
	* libc/symlink.c: Ditto.
	* libc/libio.h(rtems_filesystem_dev_major_t): New macro.
	appending to a file.

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.